# rsi-pattern-research

./: .gitignore  README.md  SYNOPSIS_2026-05-12.md  pyproject.toml
docs/: BOX_PATTERN_APPLICATIONS.md  HURST_TRANSLATION_RULE.md  METHODOLOGY.md  PATTERN_DEFINITIONS.md  SPEC.md  SYMBOLS_TESTED.md
notebooks/: 01_dxy_exploration.ipynb
results/: H1-H4_run1.md  H10_parallel_real_fld_sensitivity.md  H11_hybrid_position_sizing.md  H12_risk_adjusted_metrics.md  H13_ablation_for_spec.md  H14_intraday_TRADING_SPEC.md  H14_intraday_execution.md  H15_cross_symbol_validation.md  H16_usdmxn_calibration.md  H17_walkforward_validation.md  H18_walkforward_remaining_knobs.md  H19_shifted_window_revalidation.md  H20_1h_validation.md  H21_short_side_first_pass.md  H22_v_floor_breach_short.md  H23_major_pair_expansion.md  H24_thin_go_robustness.md  H25_vshort_expansion.md  H26_crypto_expansion.md  H27_crypto_cycle_recalibration.md  H28_timesfm_negative.md  H29_box_pattern_validation.md  H30_box_pattern_corrected.md  H31_box_regime_classifier.md  H31a_usdjpy_robustness.md  H3_event_conditional.md  H3_trough_breach.md  H7_flipped_strategies_and_fld.md  H8_surf_fib_backtest.md  H9_oos_validation.md  RSI_M_P1_TRADING_SPEC.md  _h14_run.json  _h15_run.json  _h16_usdmxn_run.json  _h17_run.json  _h17_run_window_jan21.json  _h18_run.json  _h20_run.json  _h21_run.json  _h22_run.json  (+13 more)
scripts/: bi_weekly_validation.py  generate_synopsis_figures.py  h12_risk_adjusted_backtest.py  h13_ablation_for_spec.py  h14_intraday_backtest.py  h15_cross_symbol_validation.py  h16_usdmxn_calibration.py  (+18 more)
(+20 files in other folders)
