[project]
name = "rsi-pattern-research"
version = "0.1.0"
description = "Pattern recognition on Welles Wilder RSI: M/C/V shape detection, fractal validation, and state-transition forecasting"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.25",
    "scipy>=1.11",
    "scikit-learn>=1.3",
    "matplotlib>=3.7",
    "hmmlearn>=0.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "jupyter>=1.0",
    "ipykernel>=6.25",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
