[project]
name = "rsi-pattern-research"
version = "0.2.0"
description = "Pattern recognition on Welles Wilder RSI: M/C/V shape detection, FLD confluence, SURF Fib trade engine, and intraday execution layer"
requires-python = ">=3.9"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "scipy>=1.10",
]

[project.optional-dependencies]
classifier = [
    "scikit-learn>=1.3",
    "hmmlearn>=0.3",
]
plots = [
    "matplotlib>=3.7",
]
dev = [
    "pytest>=7.4",
    "jupyter>=1.0",
    "ipykernel>=6.25",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
